--- a/.github/workflows/run_paho_tests.yaml
+++ b/.github/workflows/run_paho_tests.yaml
@@ -31,7 +31,10 @@ jobs:
               echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::''"
             fi
         - name: get deps
-          run: make deps-emqx
+          run: |
+              erl -eval '{ok, Version} = file:read_file(filename:join([code:root_dir(), "releases", erlang:system_info(otp_release), "OTP_VERSION"])), io:fwrite(Version), halt().' -noshel
+              erl -eval 'V = os:getenv("EMQX_DEPS_DEFAULT_VSN"), io:format(V), halt().' -noshel
+              make deps-emqx
         - name: make emqx image
           run: make emqx-docker-build
         - name: make paho tests
