--- a/.github/workflows/run_paho_tests.yaml
+++ b/.github/workflows/run_paho_tests.yaml
@@ -28,7 +28,7 @@ jobs:
             if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?") ]; then
               echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::$version"
             else
-              echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::''"
+              echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::\"\""
             fi
         - name: get deps
           run: |
