chore(actions): update paho tests (#551)

--- a/.github/workflows/build_packages.yaml
+++ b/.github/workflows/build_packages.yaml
@@ -3,8 +3,6 @@ name: Build packages
 on:
   pull_request:
   push:
-    branches:
-      - "*"
     tags:
       - v*
   repository_dispatch:
@@ -116,7 +114,7 @@ jobs:
         if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?") ]; then
           echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::$version"
         else
-          echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::\"\""
+          echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::"
         fi
     - name: build emqx packages
       env:
@@ -159,7 +157,7 @@ jobs:
         if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?") ]; then
           echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::$version"
         else
-          echo "::set-env name=EMQX_DEPS_DEFAULT_VSN:\"\""
+          echo "::set-env name=EMQX_DEPS_DEFAULT_VSN:"
         fi
     - name: build emqx packages
       env:
@@ -202,7 +200,7 @@ jobs:
         if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?") ]; then
           echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::$version"
         else
-          echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::\"\""
+          echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::"
         fi
     - name: build emqx docker image
       env:
