--- a/.github/workflows/run_paho_tests.yaml
+++ b/.github/workflows/run_paho_tests.yaml
@@ -4,7 +4,6 @@ on:
   push:
     tags:
       - v*
-    branch:
   repository_dispatch:
     types: [run_tests]
 
@@ -27,7 +26,7 @@ jobs:
             if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?") ]; then
               echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::$version"
             else
-              echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::\"\""
+              echo "::set-env name=EMQX_DEPS_DEFAULT_VSN::"
             fi
         - name: get deps
           run: make deps-emqx
