--- a/rebar.config
+++ b/rebar.config
@@ -45,7 +45,7 @@
   {generate_start_script, false},
   {sys_config, false},
   {vm_args, false},
-  {release, {emqx, git_describe},
+  {release, {emqx, "${EMQX_DEPS_DEFAULT_VSN}"},
    [kernel,
     sasl,
     crypto,
@@ -159,5 +159,10 @@
 {post_hooks,
  [{"(linux|darwin|solaris|freebsd|netbsd|openbsd)", compile, "./post-compile.sh"},
   {"win32", compile, "post-compile.cmd"}
+ ]}.
+
+{pre_hooks,
+ [{"(linux|darwin|solaris|freebsd|netbsd|openbsd)", relup, "./gen_appups.sh"},
+  {"win32", relup, "gen_appups.cmd"}
  ]}.
 
