fix(relup) generate appup files at compile

--- a/rebar.config
+++ b/rebar.config
@@ -165,7 +165,7 @@
  ]}.
 
 {pre_hooks,
- [{"(linux|darwin|solaris|freebsd|netbsd|openbsd)", relup, "./gen_appups.sh"},
-  {"win32", relup, "gen_appups.cmd"}
+ [{"(linux|darwin|solaris|freebsd|netbsd|openbsd)", compile, "./gen_appups.sh"},
+  {"win32", compile, "gen_appups.cmd"}
  ]}.
 
