feature(relup) update install upgrade scripts

--- a/rebar.config
+++ b/rebar.config
@@ -102,7 +102,7 @@
     {copy,"{{output_dir}}/../../conf/acl.conf","etc/acl.conf"},
     {copy,"bin/nodetool","bin/nodetool"},
     {copy,"{{output_dir}}/../../conf/schema/emqx.schema","releases/{{rel_vsn}}/"},
-    {copy,"bin/install_upgrade_escript", "bin/install_upgrade_escript"},
+    {copy,"bin/install_upgrade.escript", "bin/install_upgrade.escript"},
     {template,"{{output_dir}}/../../lib/emqx/etc/{{vm_args_file}}","etc/vm.args"},
     {copy, "{{output_dir}}/../../lib/emqx/etc/certs","etc/"},
     {copy, "{{output_dir}}/../../lib/cuttlefish/cuttlefish","bin/"}
