--- a/rebar.config
+++ b/rebar.config
@@ -46,7 +46,7 @@
   {generate_start_script, false},
   {sys_config, false},
   {vm_args, false},
-  {release, {emqx, "${EMQX_DEPS_DEFAULT_VSN}"},
+  {release, {emqx, git_describe},
    [kernel,
     sasl,
     crypto,
