feature(relup): remove the relup support for windows for now

--- a/rebar.config
+++ b/rebar.config
@@ -165,7 +165,6 @@
  ]}.
 
 {pre_hooks,
- [{"(linux|darwin|solaris|freebsd|netbsd|openbsd)", compile, "./gen_appups.sh"},
-  {"win32", compile, "gen_appups.cmd"}
+ [{"(linux|darwin|solaris|freebsd|netbsd|openbsd)", compile, "./gen_appups.sh"}
  ]}.
 
