feat(exproto): add emqx_exproto for cloud deps

--- a/rebar.config
+++ b/rebar.config
@@ -34,6 +34,7 @@
   emqx_reloader,
   emqx_psk_file,
   emqx_extension_hook,
+  emqx_exproto,
   emqx_plugin_template
  ]}.
 
@@ -121,6 +122,7 @@
   {emqx_auth_mongo, load},
   {emqx_lua_hook, load},
   {emqx_extension_hook, load},
+  {emqx_exproto, load},
   {emqx_statsd, load},
   {emqx_reloader, load},
   {emqx_psk_file, load},
@@ -134,6 +136,7 @@
  [{template,"{{output_dir}}/../../conf/plugins/emqx_lwm2m.conf", "etc/plugins/emqx_lwm2m.conf"},
   {template,"{{output_dir}}/../../conf/plugins/emqx_psk_file.conf", "etc/plugins/emqx_psk_file.conf"},
   {template,"{{output_dir}}/../../conf/plugins/emqx_extension_hook.conf", "etc/plugins/emqx_extension_hook.conf"},
+  {template,"{{output_dir}}/../../conf/plugins/emqx_exproto.conf", "etc/plugins/emqx_exproto.conf"},
   {copy,"{{output_dir}}/../../lib/emqx_lwm2m/lwm2m_xml","etc/"},
   {copy, "{{output_dir}}/../../lib/emqx_psk_file/etc/psk.txt", "etc/psk.txt"}
  ]}.
