--- a/rebar.config
+++ b/rebar.config
@@ -30,7 +30,7 @@
   emqx_auth_redis,
   emqx_auth_mongo,
   emqx_lua_hook,
-  emqx_statsd,
+  emqx_prometheus,
   emqx_reloader,
   emqx_psk_file,
   emqx_extension_hook,
@@ -123,7 +123,7 @@
   {emqx_lua_hook, load},
   {emqx_extension_hook, load},
   {emqx_exproto, load},
-  {emqx_statsd, load},
+  {emqx_prometheus, load},
   {emqx_reloader, load},
   {emqx_psk_file, load},
   {emqx_plugin_template, load},
