--- a/.github/workflows/run_deps_tests.yaml
+++ b/.github/workflows/run_deps_tests.yaml
@@ -17,8 +17,15 @@ jobs:
         - uses: actions/checkout@v1
         - name: get deps
           run: |
-            if [ ${{ github.event_name}} == 'repository_dispatch' ]; then version=${{ github.event.client_payload.version }}; else version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g"); fi
-            docker run -i --rm -e EMQX_DEPS_DEFAULT_VSN=$version -v $(pwd):/emqx-rel erlang:22.3 bash -c "make -C /emqx-rel deps-emqx"
+            if [ ${{ github.event_name}} = 'repository_dispatch' ]; then version=${{ github.event.client_payload.version }}; else version=$(echo ${{ github.ref }} | sed -r  "s ^refs/heads/|^refs/tags/(.*) \1 g"); fi
+            if [ ! -z $(echo $version | grep -oE "^[ev0-9]+\.[0-9]+(\.[0-9]+)?") ]; then deps_version=$version; else deps_version=""; fi
+            docker run -i --rm \
+                -e GITHUB_RUN_ID=$GITHUB_RUN_ID \
+                -e GITHUB_REF=$GITHUB_REF \
+                -e EMQX_DEPS_DEFAULT_VSN=$version \
+                -v $(pwd):/emqx-rel \
+                erlang:22.3 \
+                bash -c "make -C /emqx-rel deps-emqx"
         - name: Install docker-compose
           run: | 
             sudo curl -L "https://github.com/docker/compose/releases/download/1.25.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
