feature(relup): change module vsn attr using relup_helper

--- a/rebar.config
+++ b/rebar.config
@@ -148,7 +148,9 @@
 {erl_opts, [warn_unused_vars,warn_shadow_vars,warn_unused_import,
             warn_obsolete_guard,no_debug_info,compressed]}.
 
-{overrides, [{add, [{erl_opts, [no_debug_info, compressed]}]}]}.
+{overrides, [
+  {add, [{erl_opts, [no_debug_info, compressed, {parse_transform, mod_vsn}]}]}
+]}.
 
 {xref_checks, [undefined_function_calls,undefined_functions,locals_not_used,
                deprecated_function_calls,warnings_as_errors,
@@ -157,7 +159,14 @@
 {cover_opts, [verbose]}.
 {cover_export_enabled, true}.
 
-{plugins, [rebar3_run]}.
+{plugins, [
+  rebar3_run,
+  {relup_helper, {git, "https://github.com/emqx/relup_helper", {branch, "master"}}}
+]}.
+
+{provider_hooks, [
+    {pre, [{relup, {default, relup_helper}}]}
+]}.
 
 {post_hooks,
  [{"(linux|darwin|solaris|freebsd|netbsd|openbsd)", compile, "./post-compile.sh"},
