--- a/.ci/deps_tests/emqx-erlang/Dockerfile
+++ b/.ci/deps_tests/emqx-erlang/Dockerfile
@@ -1,6 +1,6 @@
 FROM erlang:22.3
 
-RUN apt-get update && apt-get install software-properties-common
+RUN apt-get update && apt-get -y install software-properties-common
 RUN wget -qO - https://adoptopenjdk.jfrog.io/adoptopenjdk/api/gpg/key/public | apt-key add - \
     && add-apt-repository --yes https://adoptopenjdk.jfrog.io/adoptopenjdk/deb/ \
-    && apt-get update && apt-get install adoptopenjdk-8-hotspot
+    && apt-get update && apt-get install -y adoptopenjdk-8-hotspot
