fix(relup): let relup_helper be the first plugin

--- a/rebar.config
+++ b/rebar.config
@@ -160,8 +160,8 @@
 {cover_export_enabled, true}.
 
 {plugins, [
-  rebar3_run,
-  {relup_helper, {git, "https://github.com/emqx/relup_helper", {branch, "master"}}}
+  {relup_helper, {git, "https://github.com/emqx/relup_helper", {branch, "master"}}},
+  rebar3_run
 ]}.
 
 {provider_hooks, [
