--- a/.github/workflows/run_deps_tests.yaml
+++ b/.github/workflows/run_deps_tests.yaml
@@ -22,9 +22,9 @@ jobs:
             docker run -i --rm \
                 -e GITHUB_RUN_ID=$GITHUB_RUN_ID \
                 -e GITHUB_REF=$GITHUB_REF \
-                -e EMQX_DEPS_DEFAULT_VSN=$version \
+                -e EMQX_DEPS_DEFAULT_VSN=$deps_version \
                 -v $(pwd):/emqx-rel \
-                erlang:22.3 \
+                emqx/build-env:erl22.3-debian10 \
                 bash -c "make -C /emqx-rel deps-emqx"
         - name: Install docker-compose
           run: | 
